# uinstall_tools

./: CMakeLists.txt
src/: uninstall_manifest.cpp
